package library.borrowableitems.books;

public enum BookType {
    NOVEL,
    TEXTBOOK,
    ENCYCLOPEDIA;
}
